standalone portal running

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dev:admin": "pnpm --filter admin-dashboard dev",
     "dev:worker": "pnpm --filter worker-app dev",
     "dev:employer": "pnpm --filter employer-app dev",
-    "dev:web": "concurrently -n admin,worker,employer -c cyan,yellow,magenta \"pnpm dev:admin\" \"pnpm dev:worker\" \"pnpm dev:employer\"",
+    "dev:portal": "pnpm --filter standalone-portal dev",
+    "dev:web": "concurrently -n admin,worker,employer,portal -c cyan,yellow,magenta,blue \"pnpm dev:admin\" \"pnpm dev:worker\" \"pnpm dev:employer\" \"pnpm dev:portal\"",
     "prod:core": "pnpm --filter './core/*' run start:prod",
     "prod:web": "pnpm --filter './web_apps/*' run start",
     "prod": "concurrently -n core,web -c blue,green \"pnpm prod:core\" \"pnpm prod:web\"",
